--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "emoji-picker-react": "^3.4.8",
     "firebase": "^8.6.8",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
@@ -44,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.8.1",
+    "@types/react-google-recaptcha": "^2.1.2",
     "@types/react-router-dom": "^5.3.0",
     "@types/styled-components": "^5.1.14"
   }
