--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
