--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.6.8",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.3.0",
